# demo-clion-cmake

./: CMakeLists.txt  LibNMath.cpp  README.md  main.cpp  解决方案的说明文档.md
Solution1/: CMakeLists.txt  LibNMath.h
Solution2/: CMakeLists.txt  LibNMath.cpp  LibNMath.h  main.cpp
Solution3/: CMakeLists.txt  LibNMath.cpp  LibNMath.h
Solution4/: CMakeLists.txt  LibNMath.cpp  LibNMath.h  main.cpp
note/GPU-Note/GPU初学-笔记/: gpu.md  vec-add.cu
problem/: CMakeLists.txt
